2004-06-09  Adam Fedor  <fedor@gnu.org>

	* Version 1.9.2
	* Documentation/GNUmakefile: Include ../Version
	* Documentation/README.Cygwin: minor updates.
	* Documentation/gnustep-howto.texi, Documentation/machines.texi: Update

2004-06-05  Adam Fedor  <fedor@gnu.org>

	* ld_lib_path.[c]sh: Allow seting of GNUstep framework location on
	Mac OS X for all library combos (patch from Quentin Mathe
	<gnustep-quentin@club-internet.fr>).

	* Instance/application.make ($(APP_INFO_PLIST_FILE)): Don't fail
	if plmerge does not work.

	* Documentation/README.Cygwin: Update
	* Documentation/machines.texi: Add Mac OS X section.
	* Documentation/news.texi: Update.

Tue Jun  1 15:43:45 BST 2004  Riccardo Mottola <rollei@tiscalinet.it>

	* debugapp.in (appname): Fixed escaping of --args argument to work
	with an alien grep / os.

2004-05-17 Richard Frith-Macdonald <rfm@gnu.org>

        * Instance/Documentation/autogsdoc.make: Simplify rules.  Avoid
	dependency on existence of documentation subdirectory by relying on
	new autogsdoc feature (it now creates the subdirectory if necessary).
	This prevents possible recursion in make process.

2004-05-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Master/rules.make: Pass 'operation' to instances in
	'GNUSTEP_OPERATION'
        * Instance/Documentation/autogsdoc.make: Use 'GNUSTEP_OPERATION'

Thu Apr 29 15:54:17 2004  Nicola Pero <n.pero@mi.flashnet.it>
	
	* Instance/Documentation/autogsdoc.make
	(GNUSTEP_INSTANCE/dependencies): Only include this file when the
	operation is 'all'.
	(internal-doc-clean): Do not run autogsdoc here.
	(internal-doc-distclean): Rule removed.  No longer needed, as the
	previous changes should do the real fix.
	
Thu Apr 29 14:04:61 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* Instance/Documentation/autogsdoc.make (internal-doc-distclean):
	Added rule, to make sure a 'make distclean' actually cleans.

2004-04-27  Adam Fedor  <fedor@gnu.org>

	* clean_os.sh: Report netbsd1.6* and netbsd2* as netbsdelf.
