@@ -1,3 +1,8 @@
+2004-06-14  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in (uninstall): Remove all installed files (still
+	need to do directories).
+
 2004-06-09  Adam Fedor  <fedor@gnu.org>
 
 	* Version 1.9.2
